@@ -9,6 +9,7 @@ What's new:
 Internal changes:
 * The QMicroz lib has become a submodule and no longer requires additional build.
 * Simplified DataContainer.
+* Advanced FileValues.
 
 ---
 Veretino 0.6.3
